--- a/_data/skills.yaml
+++ b/_data/skills.yaml
@@ -24,9 +24,5 @@ topskills:
 otherskills:
   - C/C++
   - Python
-  - SASS
-  - Erlang
-  - CoffeScript
-  - Git
-  - Graphic Design
-  - Vfx Design Adobe
+  - Julia
+  - Adboe Photoshop
